# chunk-cli

./: .gitignore  .golangci.yml  .goreleaser.yaml  .latest-session  .mise.toml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CLI.md  Dockerfile  Dockerfile.ci  Dockerfile.sandbox  Kraftfile  LICENSE  README.md  SUMMARY.md  Taskfile.yml  biome.json  bunfig.toml  demo-change.txt  demo-sandbox.sh  demo-snapshot.sh  env.json  go.mod  go.sum  install-local.sh  install.sh  main.go  package.json  renovate.json  tasks.md  tsconfig.json
.chunk/: commands.json  config.json  review-prompt.md
.circleci/: config.yml  release.yml  unikraft.yml
.claude/: settings.json
.github/: CODEOWNERS
acceptance/: acceptance_test.go  auth_test.go  build_prompt_test.go  completion_test.go  config_test.go  go.mod  go.sum  hook_test.go  init_test.go  repos.json  sandbox_gaps_test.go  sandbox_image_test.go  sandbox_reset_test.go  sandbox_snapshot_test.go  sandbox_test.go  sandboxes_build_e2e_test.go  sidecar_gaps_test.go  sidecar_test.go  sidecars_build_e2e_test.go  skills_test.go  task_test.go  upgrade_test.go  validate_test.go  validate_variants_test.go
docs/: ARCHITECTURE.md  CLI.md  DIFF_TOOLS.md  GETTING_STARTED.md  HOOKS.md  SANDBOXES.md  SKILLS.md  cli-patterns.md
envbuilder/: envbuilder.go  envbuilder_test.go
harness/: environment.py  pyproject.toml
httpcl/: client.go  client_test.go
scripts/: build.ts  build_dev.py  cf_diff.py  list-sandboxes.ts  release.ts  sync-e2b-templates.sh  template.py  trigger-release.sh
skills/: embed.go
src/: completions.ts  globals.d.ts  index.ts  (+2 more)
(+518 files in other folders)
